# BirdBros

./: .env  .gitignore  .swift  BirdBros Recycle Co.spec  README.md  api_key_store.py  birdbros_config.json  bound_box_define.py  bound_box_drawer.py  cam_controller.py  capture_regions.py  centroid_calculation.py  config_manager.py  contact_sheet_builder.py  control_panel.py  control_panel_ui.py  draw_regions.py  event_session.py  event_session.vintage.py  event_session_manager.py  event_session_manager.vintage.py  first_run_setup.py  frame_change_analyzer.py  garbage.py  image_object.py  image_subject.py  logger.py  macos_permissions.py  main.old.py  main.py  main.vintage.py  motion_analysis.py  motion_detector.py  motion_object_tracker.py  motion_triggered_buffer.py  mouse_tools.py  overlay_window.py  resulting_action.py  roi_regions.py  rois.py  (+5 more)
.github/: CODEOWNERS
BirdBros.xcodeproj/: project.pbxproj
assets/: BirdBros.icns
competitor app/: .gitignore  README.md  pyproject.toml
competitor app/competitor_app/: __init__.py  actions.py  capture.py  cli.py  config.py  contact_sheet.py  diagnostics.py  events.py  runtime.py  vision.py
competitor app/examples/: config.example.json
competitor app/tests/: test_actions.py  test_config.py  test_events_and_diagnostics.py  test_vision.py
debug_contact_sheet_selection/: 20260711_202743_selected_frames.csv  20260711_202749_selected_frames.csv  20260711_202806_selected_frames.csv  20260711_202810_selected_frames.csv  20260711_202813_selected_frames.csv  20260712_141701_all_event_records.csv  (+3 more)
logs/: birdbros.jsonl
(+18 files in other folders)
